 HT ChangeLog
==============

version 2.0.22:
	- Fixed selection of nodes in call chain
	- Added ability to view/edit 64 bit symbols and relocation for ELFs
	  (Thanks tecknicaltom)
	- Added new option "editor/scroll offset" which determines how many
	  extra lines the cursor should be visible when scolling
	  (Thanks tecknicaltom)
	- Updated address of FSF

version 2.0.21:
	- [x86] AVX2 updates
	- Fixed usage of unaliged pointers (Thanks Jan)
	- Restructed configure/makefile for better handling of
	  ncurses depedency (Thanks Jan)

version 2.0.20:
	- Fixed loading of 32 bit ELFs (Thanks Oleg)
	- Use wide ncurses if necessars (Thanks Jan)
	- Show search progress in MiB (Thanks Jan)

version 2.0.19:
	- [x86] fixed a lot of small bugs
	- fixed a crash with the "follow" function on
	  invalid addresses in analyser
	- [x86] AVX updates
	- [x86] AVX2
	- [x86] BMI, BMI2 and TBM instructions
	- fixed loading of ELF files with no section headers
	- [Win32] Fixed loading of files with path length > 100 (thanks Vitaliy)

version 2.0.18:
	- updated c++ demangler
	- [x86] SSE5/XOP/AVX merge
	- [x86] AMD LWP instructions
	- symbols "first" and "last" in hex view
	- project manager works again

version 2.0.17:
	- compilation fixes for gcc 4.4
	- fixed crash on garbage in elf section headers

version 2.0.16:
	- [x86] intel avx update
	- updated c++ demangler
	- small crash fix

version 2.0.15:
	- [Win32] removed a debug printf
	- fixed clipboard view
	- fixed ELF symbol viewer

version 2.0.14:
	- [x86] movbe, invept, invvpid
	- [eval] better help
	- [eval] last result (symbol _)
	- [eval] u8, u16 etc. for current byte, word..
	- fixed embarrassing endianess bug

version 2.0.13:
	- [win32] optimize redrawing (reduce flicker)
	- [x86] intel avx, aes and pclmulqdq extension

version 2.0.12:
	- fixed crash with too long lines
	- fixed some cosmetic resizing things in dialogs
	  (File-Open, Show-Xrefs)
	- c++-demangler from gcc 4.3

version 2.0.11: