@@ -8,6 +8,8 @@ version 2.0.22:
 	- Added new option "editor/scroll offset" which determines how many
 	  extra lines the cursor should be visible when scolling
 	  (Thanks tecknicaltom)
+	- Fixed loading of ELF files for alpha
+	- Fixed some compilation problems with newer toolchain
 	- Updated address of FSF
 
 version 2.0.21:
